# ZeroEdge

./: .gitignore  Cargo.toml  README.md  README_zh.md
.github/workflows/: rust.yml
docs/: architecture.md  protocol_spec.md
src/: lib.rs  main.rs
src/cli/: commands.rs  helpers.rs  mod.rs  processor.rs
src/crypto/: double_ratchet.rs  encryption.rs  keys.rs  mod.rs  signing.rs
src/dht/: bootstrap.rs  kademlia.rs  mod.rs  network.rs  private_dht.rs  protocol.rs  public_dht.rs  routing.rs  storage.rs  validation.rs
src/identity/: device.rs  mod.rs  trust.rs  user.rs  verification.rs
src/message/: delivery.rs  encryption.rs  group_messaging.rs  message_types.rs  mod.rs  offline_storage.rs
src/nat/: hole_punching.rs  mod.rs  relay.rs  stun.rs
src/network/: connection.rs  message_pool.rs  mod.rs  peer.rs  protocol.rs
src/storage/: database.rs  file_storage.rs  identity_store.rs  message_store.rs  mod.rs
src/utils/: config.rs  logger.rs  mod.rs
tests/: basic.rs  comprehensive_integration.rs  connect_command_test.rs  dht_basic_test.rs  dht_fixed_test.rs  dht_network_integration.rs  dht_node_lookup_bug.rs  dht_real_usage.rs  dht_validation.rs  integration.rs
