[package]
name = "zero_edge"
version = "0.1.2"
edition = "2021"
authors = ["Steven Chen <i@stevenchen.site>"]
description = "ZeroEdge - A fully decentralized P2P chat protocol"
repository = "https://github.com/amplimit/zero_edge"
license = "MIT OR Apache-2.0"

[dependencies]
# Networking
libp2p = { version = "0.45.1", features = ["kad", "identify", "ping", "tcp-tokio", "noise", "yamux", "mdns"] }
tokio = { version = "1.29.1", features = ["full"] }
async-std = "1.12.0"

# Cryptography
ring = "0.16.20"
ed25519-dalek = "1.0.1"
x25519-dalek = "1.2.0"
aes-gcm = "0.10.2"
chacha20poly1305 = "0.9.0"
rand = "0.8.5"

# Storage
sled = "0.34.7"
bincode = "1.3.3"

# Serialization
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"

# Error correction
reed-solomon-erasure = "4.0.2"

# Utilities
log = "0.4.19"
env_logger = "0.10.0"
thiserror = "1.0.43"
anyhow = "1.0.71"
hex = "0.4.3"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
chrono = { version = "0.4.24", features = ["serde"] }

# Command Line Interface
rustyline = "11.0.0"
colored = "2.0.0"
clap = { version = "4.3.0", features = ["derive"] }
shlex = "1.1.0"
indoc = "2.0.0"
dirs = "5.0.1"

[dev-dependencies]
criterion = "0.5.1"
hex = "0.4.3"
tempfile = "3.8.0"

# [[bench]]
# name = "network_bench"
# harness = false
